--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bibliotecavittorio
 
-spring.datasource.url=jdbc:h2:file:./h2/banco;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./h2/bancolb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 
